# hello-llm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build_prompt.py  extract.py  inbuilt.py  jobs.json  main.py  models.py  prompt_builder.py  pyproject.toml  streame_cli.py  test_extract.py  test_prompt_builder.py
.claude/: settings.local.json
fixtures/: job_posting.json
