[project]
name = "hello-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.45.0",
    "openrouter>=0.11.18",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff.lint]
extend-select = ["B"]
